## Process this file with automake to produce Makefile.in
## A Makefile.in is supplied, in case you do not have automake.

## $Id: Makefile.am 2997 2014-12-30 19:20:07Z heas $
##
## Copyright (c) 1997-2015 by Terrapin Communications, Inc.
## All rights reserved.
##
## Please see the file COPYING for the text of the license.

#AUTOMAKE_OPTIONS=foreign no-dependencies
AUTOMAKE_OPTIONS=foreign

@SET_MAKE@

noinst_HEADERS= config.h version.h

# no idea why automake doesnt clean these targets
CLEANFILES= stamp-h stamp-h1

all:

